Fixed problem with pinning the same node info panel without moving the mouse; truncated long names in title bars of info and value panels

--- a/openmdao/visualization/n2_viewer/style/nodedata.css
+++ b/openmdao/visualization/n2_viewer/style/nodedata.css
@@ -34,6 +34,19 @@ div.info-panel {
     cursor: grab;
 }
 
+.node-info-title {
+    /* Stuff to prevent title bar from being too long */
+    display: block;
+    position: relative;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: auto;
+    direction: rtl;
+    text-align: center;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
 .node-info-table tbody th {
     text-align: right;
     font-size: 9pt;
@@ -155,33 +168,30 @@ div.info-panel {
     margin: 0;
     padding: 5px;
     font-size: 11pt;
-    text-align: center;
+    text-align: right;
     cursor: grab;
+    white-space: nowrap;
 }
 
 .node-value-title {
     color: black;
     display: block;
-    overflow: auto;
     position: relative;
     font-weight: bold;
+
+    /* Stuff to prevent title bar from being too long */
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: auto;
+    direction: rtl;
+    text-align: center;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
-/* grabber bars on the node value title bar */
-/*
-.node-value-title::before {
-    content: '\A789\A789\A789\A789\A789\A789';
-    color: black;
-    padding-left: 5px;
-    padding-right: 5px;
-}
 .node-value-title::after {
-    content: '\A789\A789\A789\A789\A789\A789';
-    color: black;
-    padding-left: 5px;
-    padding-right: 5px;
+    content: ' Initial Value';
 }
-*/
 
 .close-value-window-button {
 	color: black;
